fixed card overlapping error, need to fix width styling and loss of upcoming events title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,6 +149,7 @@
   overflow-x: auto;
   align-items: center;
   height: 100vh;
+  width: 100vw;
 }
 #upcoming-events:: -webkit-scrollbar {
   display: none;
@@ -163,10 +164,10 @@
 }
 .card--content img {
   height: 20vh;
-  width: 30vw;
+  width: 20vw;
 }
 .card-body {
-  width: 30vw;
+  width: 20vw;
   height: 30vh;
 }
 
